Transparency dropdown fix and extra space

--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ a {
 	display: none;
 	position: absolute;
 	min-width: 160px;
+	background-color: white;
 }
 
 .dropdown-content a {
@@ -83,7 +84,7 @@ a {
 	display: flex;
 	flex-direction: column;
 	height: 3.5rem;
-	padding: 1rem 0;
+	padding: 1rem 0.5rem;
 	border-bottom: 1px solid rgb(212, 212, 212);
 }
 
@@ -147,7 +148,7 @@ a {
 }
 
 h1 {
-	margin-top: 5rem;
+	margin-top: 15rem;
 	text-transform: uppercase;
 	font-size: 1.5rem;
 	color: var(--main-color);
